--- a/students/templates/students/faq.html
+++ b/students/templates/students/faq.html
@@ -6,11 +6,12 @@
         <div class="row">
             <div class="col-md-12">
                 <h1>FAQ</h1>
+                <hr class="yellow-line">
             </div>
         </div>
     </div>
 
-    <div class="container ">
+    <div class="container-fluid">
     <div class="panel-group" id="faqAccordion">
         <div class="panel panel-default ">
             <div class="panel-heading accordion-toggle question-toggle collapsed" data-toggle="collapse" data-parent="#faqAccordion" data-target="#question0">
@@ -52,8 +53,7 @@
             <div id="question2" class="panel-collapse collapse" style="height: 0px;">
                 <div class="panel-body">
                      <h5><span class="label label-primary">Answer</span></h5>
-
-                    <p>For support, shoot us an email at <a class="nodecor highlight-link" href="mailto:hcroomservice@gmail.com">hcroomservice@gmail.com</a> For lottery questions, contact Ashley Place, assistant director of the office of residential life, at <a class="nodecor highlight-link" href="mailto:aplace@hamilton.edu">aplace@hamilton.edu</a></p>
+                    <p>For support, shoot us an email at <a class="nodecor highlight-link" href="mailto:hcroomservice@gmail.com">hcroomservice@gmail.com</a>. For lottery questions, contact Ashley Place, assistant director of the office of residential life, at <a class="nodecor highlight-link" href="mailto:aplace@hamilton.edu">aplace@hamilton.edu</a></p>
                 </div>
             </div>
         </div>
