--- a/students/templates/students/building.html
+++ b/students/templates/students/building.html
@@ -24,6 +24,7 @@
 {% endblock %}
 
 {% block content %}
+<!--    <div class="building-content">-->
       {% if floor_images %}
         <div class="col-md-12 col-lg-6 container-fluid left-content">
       {% else %}
@@ -448,7 +449,7 @@
         {% endfor %}
     </div>
     </div>
-  <!-- </div> -->
+<!--   </div> end building content -->
   {% endif %}
 
 {% endblock content %}
