--- a/static/students/header/header-roomservice.css
+++ b/static/students/header/header-roomservice.css
@@ -5,6 +5,18 @@
     }
 }*/
 
+.navbar-announcement {
+    margin-bottom: 0px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    border-radius: 0px;
+    border: none;
+    background-color: #b91823;
+    color: white;
+    text-align: center;
+    font-family: 'Khula', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
 .navbar-toggle {
     border: none;
     outline: none;
@@ -37,6 +49,16 @@
     background-color: #002f86;
     color: white;
     border: none;
+}
+
+@font-face {
+    font-family: "Bodoni 72 Book";
+    src: url("/static/students/fonts/Bodoni72Book.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "Avenir";
+    src: url("/static/students/fonts/Avenir.ttf") format("truetype");
 }
 
 @font-face {
@@ -202,9 +224,11 @@
 .navbar-site-name:focus,
 .navbar-site-name:active {
     color: #a9a9a9;
+    cursor: pointer;
+    cursor: hand;
 }
 
 #header-container {
     margin-bottom: 0px;
-    margin-top: 0px;
+    padding-bottom: 0px;
 }
