--- a/students/static/students/building/building-roomservice.css
+++ b/students/static/students/building/building-roomservice.css
@@ -1,16 +1,3 @@
-/* * {
-  -webkit-border-radius: 0 !important;
-     -moz-border-radius: 0 !important;
-          border-radius: 0 !important;
-}*/
-/*
-* {
-    -webkit-border-radius: 0 !important;
-    -moz-border-radius: 0 !important;
-    border-radius: 0 !important;
-}
-*/
-
 .building-tabs > a {
     color: #002f86;
 }
@@ -20,20 +7,9 @@
     color: black;
 }
 
-#main {
-    background-color: white;
-}
-
 #page-title {
     margin-bottom: 20px;
 }
-/*
-    font-family: 'Roboto', sans-serif;
-    font-size: 3.125em;
-    font-weight: 400;
-    line-height: 51px;
-    color: #545454;
-}*/
 
 .table-responsive {
     padding-top: 12px;
@@ -164,25 +140,14 @@
     margin-bottom: 10px;
 }
 
-.table-parent {
-    overflow-y: scroll;
-    -webkit-overflow-scrolling: touch;
-}
-
-body, html {
-    overflow-x: hidden;
-    overflow-y: hidden;
-}
-
 .left-content{
   height: 100%;
   position:relative;
   overflow-y: scroll;
   overflow-x: hidden;
-
 }
 
-.right-content{
+.right-content {
     float:left;
     height: 100%;
     overflow: hidden;
@@ -244,13 +209,12 @@ body, html {
     left:0;
     position: absolute;
     color: #333;
-    padding 0px;
+    padding: 0px;
 }
 
 .thumb-div {
     padding-right: 4px;
     padding-left: 4px;
-
 }
 
 .thumbnail {
@@ -261,7 +225,7 @@ body, html {
     vertical-align: middle;
 }
 
-.thumbnail-row{
+.thumbnail-row {
   padding-left: 11px;
   padding-right: 11px;
 }
