Committing from server to pull

--- a/static/students/header/header-roomservice.css
+++ b/static/students/header/header-roomservice.css
@@ -1,16 +1,27 @@
-/*@media (min-width: 765px) {
-    .navbar-toggle {
-        margin-left: 10px;
-        display: inline !important;
-    }
-}*/
+@media (min-width: 765px) {
+   .navbar-toggle {
+      margin-left: 10px;
+      display: inline !important;
+   }
+}
+
+.navbar-announcement {
+    margin-bottom: 0px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    border-radius: 0px;
+    border: none;
+    background-color: #b91823;
+    color: white;
+    text-align: center;
+    font-family: 'Khula', 'Helvetica Neue', Helvetica, sans-serif;
+}
 
 .navbar-toggle {
     border: none;
     outline: none;
     border-radius: 0px;
     float: left;
-    padding: 0px;
     margin-top: 0px;
     margin-bottom: 0px;
     margin-right: 8px;
@@ -33,10 +44,21 @@
     background-color: #a9a9a9;
 }
     
+
 .header {
     background-color: #002f86;
     color: white;
     border: none;
+}
+
+@font-face {
+    font-family: "Bodoni 72 Book";
+    src: url("/static/students/fonts/Bodoni72Book.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "Avenir";
+    src: url("/static/students/fonts/Avenir.ttf") format("truetype");
 }
 
 @font-face {
@@ -116,9 +138,9 @@
     }
     
     .navbar-text {
-        padding-top: 5px;
         font-size: 12pt;
         line-height: 60px; /* looks weirdly off center without this line */
+        padding-top: 5px;
     }
 }
 
@@ -141,7 +163,7 @@
 	position: absolute;
 	height: 60px;
     }
-
+ 
     .navbar-brand {
 	padding: 0px;
 	margin: 0px;
@@ -154,47 +176,48 @@
     }
     
     .navbar-text {
-        padding-top: 5px;
         font-size: 14pt;
+        padding-top: 5px;
         line-height: 60px;
     }
+    
 }
 
 @media screen and (min-width: 765px) {
     .header {
-	   min-height: 80px;
+	min-height: 80px;
     }
 
     #header-container {
-	   height: 80px;
+	height: 80px;
     }
 
     .navbar-toggle {
-	   height: 80px;
+	height: 80px;
     }
 
     .navbar-brand-div {
-        transform: translateX(-50%);
-        left: 50%;
-        position: absolute;
-        height: 80px;
+	transform: translateX(-50%);
+	left: 50%;
+	position: absolute;
+	height: 80px;
     }
 
     .navbar-brand {
-        padding: 0px;
-        margin: 0px;
-        padding-top: 5px;
+	padding: 0px;
+	margin: 0px;
+	padding-top: 5px;
     }
 
     .navbar-site-name {
         font-size: 30pt;
-	   line-height: 80px;
+	line-height: 80px;
     }
     
     .navbar-text {
-        padding-top: 5px;
         font-size: 18pt;
-	   line-height: 80px;
+        padding-top: 5px;
+	line-height: 80px;
     }
 }
 
@@ -202,9 +225,11 @@
 .navbar-site-name:focus,
 .navbar-site-name:active {
     color: #a9a9a9;
+    cursor: pointer;
+    cursor: hand;
 }
 
 #header-container {
     margin-bottom: 0px;
-    margin-top: 0px;
+    padding-bottom: 0px;
 }
