--- a/static/students/building/building-roomservice.css
+++ b/static/students/building/building-roomservice.css
@@ -25,7 +25,7 @@
 }
 
 #page-title {
-    margin-bottom: 20px;
+    margin-bottom: 20px; 
 }
 /*
     font-family: 'Roboto', sans-serif;   
@@ -148,13 +148,17 @@
     border-color: lightgray;
 }
 
+.filter-row {
+    margin-top: 10px;
+}
+
 .dropdown-toggle {
     border-radius: 0px;
     border: none;
 }
 
 .bootstrap-select {
-   margin-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .table-parent {
@@ -162,34 +166,121 @@
     -webkit-overflow-scrolling: touch;
 }
 
+body, html {
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
+.left-content{
+  height: 100%;
+  position:relative;
+  overflow-y: scroll;
+  overflow-x: hidden;
+
+}
+
+.right-content{
+    float:left;
+    height: 100%;
+    overflow: hidden;
+    background-color: #efefef;
+    padding-bottom: 20px;
+}
+
+@media (max-width: 1200px){
+  .right-content{
+    height: auto;
+  }
+
+  .left-content{
+    height: auto;;
+    overflow: hidden;
+  }
+  
+  body, html {
+    overflow: inherit;
+  }
+}
+
+#main{
+  padding:0px;
+}
+
 /* -------------------------
        Floor Plan Images
    ------------------------- */
+.floorplan-title{
+  padding:5px;
+  margin-bottom: 0px;
+  margin-top: 5px;
+  text-transform: uppercase;
+  font-family: 'Proza Libre', sans-serif;
+  font-weight: 300;
+  letter-spacing: 1.2px;
+  line-height: 1.7;
+  font-size: 1.75rem;
+}
+/*.floorplans{
+   position: inherit;
+   padding-top: 15px;
+   background-color: #a9a9a9;
+   margin-bottom: 15px;
+   margin-left: -15px;
+   margin-right: -15px;
+   padding-left: 5px;
+   padding-right: 5px;
+   float: right;
+}*/
+
+.thumbnails {
+   /*padding-right: 8px;*/
+}
 
 .thumbnail-label {
     top:0;
     left:0;
     position: absolute;
+    color: #333;
+    padding 0px;
 }
 
 .thumb-div {
-    padding-right: 8px;
-    padding-left: 8px;
+    padding-right: 4px;
+    padding-left: 4px;
+
 }
 
 .thumbnail {
     border-radius: 0;
+    margin-bottom: 8px;
     position:relative;
-    text-align: center;
+    text-align: left;
     vertical-align: middle;
 }
 
+.thumbnail-row{
+  padding-left: 11px;
+  padding-right: 11px;
+}
 /* get rid of upper margin only when the floor plan/room panels are displaying next to each other */
-@media (min-width: 992px) {  
+@media (min-width: 992px) {
     #floorPlanName {
         margin-top: 0px;
     }
+    /* Fix the floorplan viewer to the top corner */
+    /*.floorplans{
+      position: fixed;
+      top:80px;
+      height: 100%;
+      margin-right: 15px;
+    }*/
+
+    /* Shift the thumbnail labels down a bit */
+    .thumbnail-label{
+      padding: 5px;
+    }
 }
+
 
 /*set a border on the images to prevent shifting*/
  #thumbnail-gallery img {
