--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -41,47 +41,77 @@
             {% include "students/header.html" %}
       {% endblock header %}
       
-    <div class="row-offcanvas row-offcanvas-left">
+      <div class="row-offcanvas row-offcanvas-left">
+      
       {% block sidebar %}
             {% include "students/sidebar.html" %}
       {% endblock sidebar %}
-
+        
+      {% if pageContent %}
+            {% if pageContent.navbar_announcement %}
+                <div class="alert alert-danger navbar-announcement" role="alert">
+                    <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                    {{ pageContent.navbar_announcement}}
+                </div>  
+            {% endif %}
+      {% endif %}
       <div id="main">
-          {% block content %}
-          <div class="col-md-12 container-fluid">
-              <div class="jumbotron" id="home-jumbotron">
-                    <h1>
-                    {% if pageContent %}
-                        {{pageContent.header_text}}
-                    {% else %}
-                        Let the search begin!
-                    {% endif %}
-                    </h1>
 
-                    <p>
-                    {% if pageContent %}
-                        {{ pageContent.header_subtext|linebreaksbr }}
-                    {% else %}
-                        Select a building from the left sidebar to view room availability by building.
+          {% block content %} 
+        
+
+        <div class="col-md-12 container-fluid">
+              <div class="jumbotron" id="home-jumbotron">
+                <h1>
+                {% if pageContent %}
+                    {{pageContent.header_text}}
+                {% else %}
+                    Let the search begin!
+                {% endif %}
+                </h1>
+              
+                <p>
+                {% if pageContent %}
+                    {{ pageContent.header_subtext|linebreaksbr }}
+                {% else %}
+                    Select a building from the left sidebar to view room availability by building.
+                {% endif %}
+                </p>
+                {% if pageContent %}
+                    {% if pageContent.header_block_text %}
+                        {{ pageContent.header_block_text|linebreaks }}
                     {% endif %}
-                    </p>
-                    {% if pageContent %}
-                        {% if pageContent.header_block_text %}
-                            {{ pageContent.header_block_text|linebreaks }}
-                        {% endif %}
-                    {% endif %}
-                    <p>
-                        <a type="button" class="btn btn-default btn-lg home-button" href="{% url 'faq' %}">
+                {% endif %}
+                <p>
+                   <a type="button" class="btn btn-default btn-lg home-button" href="{% url 'faq' %}">
                             FAQs
-                        </a>
+                    </a>
                         
-                        <button type="button" class="btn btn-default btn-lg home-button search-button" data-toggle="offcanvas" data-target=".sidebar">
+                    <button type="button" class="btn btn-default btn-lg home-button search-button" data-toggle="offcanvas" data-target=".sidebar">
                             Search
-                        </button>
-                    </p>
-                    
+                    </button>
+                </p>
+          </div>
+        </div> <!-- End Container-->
+
+          <div class="col-md-6">
+              <div class="landing-panel panel landing-panel-button hidden-sm hidden-md hidden-lg">
+                <div class="landing-panel-heading container-fluid" data-toggle="offcanvas" data-target=".sidebar" href="#" style="clear: both;">
+                    <h3 class="landing-panel-title" style="float: left;">Start Your Search</h3>
+                    <h3 class="landing-panel-title" style="float: right;"><span class="glyphicon glyphicon-chevron-right"></span></h3>
+                  </div>
               </div>
-          </div><!--/container-->
+              
+              <a href="{% url 'faq' %}" class="nodecor hidden-sm hidden-md hidden-lg" id="faq-button">
+                   <div class="landing-panel panel landing-panel-button nodecor">
+                       <div class="landing-panel-heading container-fluid nodecor" style="clear: both;">
+                           <h3 class="landing-panel-title" style="float: left;">FAQ</h3>
+                           <h3 class="landing-panel-title" style="float: right;"><span class="glyphicon glyphicon-chevron-right"></span></h3>
+                        </div>
+                   </div>
+              </a>
+              
+          </div>
 
           {% comment %}
           <div class="col-md-6 hidden-xs hidden-sm">
@@ -129,12 +159,13 @@
           </div><!--/col-->
           {% endcomment %}
         {% endblock content %}
-          {% block footer %}
-                {% include "students/footer.html" %}
-          {% endblock footer %}
+          
         </div>
     </div><!--/row-offcanvas -->
-
+                
+    {% block footer %}
+        {% include "students/footer.html" %}
+    {% endblock footer %}
 
 
     <!-- Bootstrap core JavaScript
@@ -147,6 +178,7 @@
     <script src="/static/students/assets/js/ie10-viewport-bug-workaround.js"></script>
     <!-- Script for collapsable side navigation -->
     <script src="/static/students/sidebar/sidebar.js"></script>
+
       
     {% block custom-js %}
         <!-- Twitter Timeline
@@ -154,4 +186,5 @@
         <script src="/static/students/assets/js/twitter-timeline.js"></script>
     {% endblock %}
     </body>
+    
 </html>
