--- a/students/static/students/building/building-roomservice.css
+++ b/students/static/students/building/building-roomservice.css
@@ -154,7 +154,7 @@
 .right-content {
     float:left;
     height: 100%;
-    overflow: hidden;
+    overflow: scroll;
     background-color: #efefef;
     padding-bottom: 20px;
 }
@@ -181,37 +181,44 @@
 /* -------------------------
        Floor Plan Images
    ------------------------- */
-.floorplan-title{
+.floorplan-title {
   padding:5px;
   margin-bottom: 0px;
-  margin-top: 5px;
-  text-transform: uppercase;
+  margin-top: 15px;
   font-family: 'Proza Libre', sans-serif;
   font-weight: 300;
   letter-spacing: 1.2px;
   line-height: 1.7;
-  font-size: 1.5rem;
+  text-transform: uppercase;
+  font-size: 16px;
 }
 
 @media (max-width: 1500px) and (min-width: 1200px){
   .thumb-div{
-    width:33%;
+    width:25%;
   }
 }
 
 @media (max-width: 1200px) and (min-width: 992px){
   .thumb-div{
-    width:25%%;
+    width:25%;
   }
 }
 
-
 .thumbnail-label {
-    top:0;
-    left:0;
+    top: 5px;
+    padding-top: 5px;
+    left: 0;
+    width: 100%;
     position: absolute;
     color: #333;
-    padding: 0px;
+    text-transform: uppercase;
+    background-color: rgba(255, 255, 255, .1);
+    height: 100%;
+    font-family: 'Khula', 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 1.75rem;
+    text-overflow: ellipsis;
+    text-align: center;
 }
 
 .thumb-div {
@@ -223,24 +230,26 @@
     border-radius: 0;
     margin-bottom: 8px;
     position:relative;
-    text-align: left;
-    vertical-align: middle;
+}
+
+a.thumbnail.active,
+a.thumbnail:hover,
+a.thumbnail:focus {
+    border-color: #002f86;
 }
 
 .thumbnail-row {
-  padding-left: 11px;
-  padding-right: 11px;
+    padding-left: 11px;
+    padding-right: 11px;
 }
 
 /* get rid of upper margin only when the floor plan/room panels are displaying next to each other */
 @media (min-width: 992px) {
-    #floorPlanName {
-        margin-top: 0px;
-    }
  
     /* Shift the thumbnail labels down a bit */
     .thumbnail-label{
-      padding: 5px;
+        padding: 5px;
+        padding-top: 30%;
     }
 }
 
