--- a/students/static/students/header/header-roomservice.css
+++ b/students/static/students/header/header-roomservice.css
@@ -111,7 +111,45 @@
     padding: 0px;
 }
 
-@media screen and (max-width: 450px){
+@media screen and (max-width: 369px){
+    .header {
+        min-height: 60px;
+    }
+    
+    #header-container {
+        height: 60px;
+    }
+    
+    .navbar-toggle {
+        padding-top: 4px;
+        padding-right: 10px;
+        height: 60px;
+    }
+    
+    .navbar-brand-div {
+        float: left;
+        height: 60px;
+    }
+    
+    .navbar-brand {
+        padding: 0px;
+        margin: 0px;
+        margin-top: 5px;
+    }
+    
+    .navbar-site-name {
+        line-height: 60px;
+        font-size: 16pt;
+    }
+    
+    .navbar-text {
+        padding-top: 5px;
+        font-size: 12pt;
+        line-height: 60px;
+    }
+}
+
+@media screen and (min-width: 370px) and (max-width: 450px){
     .header {
         min-height: 60px;
     }
