--- a/students/templates/students/building.html
+++ b/students/templates/students/building.html
@@ -26,101 +26,105 @@
       {% else %}
         <div class="col-md-12">
       {% endif %}
-        <a name="top"></a><!-- top anchor -->
-        <h1 id="page-title">
-            {{current_building.name}} <small style="vertical-align: middle">
-                {% if current_building.closed_to == 'F' %}
-                    <span class="label building-label">Closed to Women</span>
-                {% elif current_building.closed_to == 'M' %}
-                    <span class="label building-label">Closed to Men</span>
-                {% endif %}
-                </small>
-        </h1>
-        <div class="row building-stats">
+        <div class="col-md-12">
+            <a name="top"></a><!-- top anchor -->
+            <h1 id="page-title">
+                {{current_building.name}} <small style="vertical-align: middle">
+                    {% if current_building.closed_to == 'F' %}
+                        <span class="label building-label">Closed to Women</span>
+                    {% elif current_building.closed_to == 'M' %}
+                        <span class="label building-label">Closed to Men</span>
+                    {% endif %}
+                    </small>
+            </h1>
+            <div class="row building-stats">
 
-            <!-- Types of Rooms -->
-            <div class="col-md-12">
-                <div class="panel panel-default" id="RoomTypePanel">
-                    <div class="stat-panel-heading">
-                        <h3 class="panel-title">Types of Rooms Available</h3>
-                    </div>
-                    <div class="panel-body">
-                        {% if current_building.total_singles != 0 %}
-                            <strong>{{current_building.available_singles}}</strong>
-                            {% if current_building.available_singles == 1 %}
-                                Single
-                            {% else %}
-                                Singles
-                            {% endif %}
-                            <br>
-                        {% endif %}
-                        {% if current_building.total_doubles != 0 %}
-                            <strong>{{current_building.available_doubles}}</strong>
-                            {% if current_building.available_doubles == 1 %}
-                                Double
-                            {% else %}
-                                Doubles
-                            {% endif %}
-                            <br>
-                        {% endif %}
-                        {% if current_building.total_triples != 0 %}
-                            <strong>{{current_building.available_triples}}</strong>
-                            {% if current_building.available_triples == 1 %}
-                                Triple
-                            {% else %}
-                                Triples
-                            {% endif %}
-                            <br>
-                        {% endif %}
-                        {% if current_building.total_quads != 0 %}
-                            <strong>{{current_building.available_quads}}</strong>
-                            {% if current_building.available_quads == 1 %}
-                                Quad
-                            {% else %}
-                                Quads
-                            {% endif %}
-                            <br>
-                        {% endif %}
-
-                    </div><!--/panel-body-->
-               </div><!--/panel-->
-            </div><!--col-md-6-->
-
-            <!-- Building Notes -->
-            {% if current_building.notes %}
-             <div class="col-md-12">
-                <div class="panel panel-default">
-                    <div class="stat-panel-heading">
-                        <h3 class="panel-title">Notes</h3>
-                    </div>
-                    <div class="panel-body">
-                        {{current_building.notes}}
-                    </div>
-                </div>
-             </div>
-            {% endif %}
-
-            {% if floor_images %}
-            <!-- Link to floor plan images if small screen -->
-            <div class="col-md-6 hidden-lg">
-               <a href="#floorPlans" class="nodecor" id="floorPlanViewButton">
-                   <div class='sticky-anchor'></div>
-                   <div class="panel panel-green panel-default nodecor sticky">
-
-                       <div class="stat-panel-heading-green nodecor" style="clear: both;">
-                           <h3 class="panel-title-green nodecor floorplan-button" id="floorplan-photo-icon">
-                                <span class="glyphicon glyphicon-picture" aria-hidden="true"></span>
-                           </h3>
-                           <h3 class="panel-title-green nodecor floorplan-button" id="floorplan-text">
-                           View Floor Plans
-                           </h3>
+                <!-- Types of Rooms -->
+                <div class="col-md-12">
+                    <div class="panel panel-default" id="RoomTypePanel">
+                        <div class="stat-panel-heading">
+                            <h3 class="panel-title">Types of Rooms Available</h3>
                         </div>
-                   </div>
-                </a>
-             </div>
-            {% endif %}
+                        <div class="panel-body">
+                            {% if current_building.has_singles %}
+                                <strong>{{current_building.available_singles}}</strong>
+                                {% if current_building.available_singles == 1 %}
+                                    Single
+                                {% else %}
+                                    Singles
+                                {% endif %}
+                                <br>
+                            {% endif %}
+                            {% if current_building.has_doubles %}
+                                <strong>{{current_building.available_doubles}}</strong>
+                                {% if current_building.available_doubles == 1 %}
+                                    Double
+                                {% else %}
+                                    Doubles
+                                {% endif %}
+                                <br>
+                            {% endif %}
+                            {% if current_building.has_triples %}
+                                <strong>{{current_building.available_triples}}</strong>
+                                {% if current_building.available_triples == 1 %}
+                                    Triple
+                                {% else %}
+                                    Triples
+                                {% endif %}
+                                <br>
+                            {% endif %}
+                            {% if current_building.has_quads %}
+                                <strong>{{current_building.available_quads}}</strong>
+                                {% if current_building.available_quads == 1 %}
+                                    Quad
+                                {% else %}
+                                    Quads
+                                {% endif %}
+                                <br>
+                            {% endif %}
 
-          </div><!--/row-->
+                        </div><!--/panel-body-->
+                   </div><!--/panel-->
+                </div><!--col-md-6-->
+
+                <!-- Building Notes -->
+                {% if current_building.notes or current_building.notes2 %}
+                 <div class="col-md-12">
+                    <div class="panel panel-default">
+                        <div class="stat-panel-heading">
+                            <h3 class="panel-title">Notes</h3>
+                        </div>
+                        <div class="panel-body">
+                            {% if current_building.notes %}
+                                {{current_building.notes}}
+                            {% endif %}
+                        </div>
+                    </div>
+                 </div>
+                {% endif %}
+
+                {% if floor_images %}
+                <!-- Link to floor plan images if small screen -->
+                <div class="col-md-6 hidden-lg">
+                   <a href="#floorPlans" class="nodecor" id="floorPlanViewButton">
+                       <div class='sticky-anchor'></div>
+                       <div class="panel panel-green panel-default nodecor sticky">
+
+                           <div class="stat-panel-heading-green nodecor" style="clear: both;">
+                               <h3 class="panel-title-green nodecor floorplan-button" id="floorplan-photo-icon">
+                                    <span class="glyphicon glyphicon-picture" aria-hidden="true"></span>
+                               </h3>
+                               <h3 class="panel-title-green nodecor floorplan-button" id="floorplan-text">
+                               View Floor Plans
+                               </h3>
+                            </div>
+                       </div>
+                    </a>
+                 </div>
+                {% endif %}
+
+              </div><!--/row-->
+            </div>
 
       <!-- End of Header Panels -->
 
@@ -364,8 +368,12 @@
                                     {% endif %}
                                 </td>
                                 <td>
-                                    {% if room.notes %}
+                                    {% if room.notes and room.notes2 %}
+                                        {{room.notes}} | {{room.notes2}}
+                                    {% elif room.notes %}
                                         {{room.notes}}
+                                    {% elif room.notes2 %}
+                                        {{room.notes2}}
                                     {% else %}
                                         --
                                     {% endif %}
