--- a/students/templates/students/footer.html
+++ b/students/templates/students/footer.html
@@ -1,7 +1,7 @@
 <div class="navbar navbar-fixed-bottom">
   <div class="container-fluid">
     <div class="col-md-12">
-        <p class="muted pull-left footer-text hidden-xxs">Hamilton College Computer Science</p>
+        <p class="muted pull-left footer-text">Hamilton <span class="hidden-xxs">College</span> Computer Science</p>
         <a class="pull-right footer-text" href="{% url 'contact' %}">Contact Us</a>
     </div>
   </div>
